RESOLVED FIXED235096
[libpas] thread_local_cache should not be allocated in the compact heap (cherry pick 11afcedfb5968f6894379ff1a41dd449ba7745f6)
https://bugs.webkit.org/show_bug.cgi?id=235096
Summary [libpas] thread_local_cache should not be allocated in the compact heap (cher...
Filip Pizlo
Reported 2022-01-11 20:30:22 PST
...
Attachments
maybe the patch (48.07 KB, patch)
2022-01-11 20:32 PST, Filip Pizlo
ews-feeder: commit-queue-
the patch (54.02 KB, patch)
2022-01-12 13:58 PST, Filip Pizlo
ysuzuki: review+
Filip Pizlo
Comment 1 2022-01-11 20:31:01 PST
Filip Pizlo
Comment 2 2022-01-11 20:32:17 PST
Created attachment 448902 [details] maybe the patch Still testing it
Filip Pizlo
Comment 3 2022-01-12 13:58:58 PST
Created attachment 448994 [details] the patch
Yusuke Suzuki
Comment 4 2022-01-12 14:51:20 PST
Comment on attachment 448994 [details] the patch r=me
Filip Pizlo
Comment 5 2022-01-12 18:52:21 PST
Note You need to log in before you can comment on or make changes to this bug.